# Machines-and-Computation

./: .gitignore  CFG.cpp  CFG.h  CMakeLists.txt  GNF.cpp  GNF.h  LICENSE.md  README.md  ThreadFunction.cpp  Tokenazation.cpp  Tokenazation.h  anas.txt  config.json  docs  helper.cpp  json.hpp  main.cpp  message.txt  website.txt
.circleci/: config.yml
TM/: Tape.cpp  Tape.h  TuringMachine.cpp  TuringMachine.h  TuringProduction.cpp  TuringProduction.h  TuringTokenizer.cpp  TuringTokenizer.h  TuringTools.cpp  TuringTools.h
TM/Creation/: TMBuilder.cpp  TMBuilder.h  TMTransitionBuilder.cpp  TMTransitionBuilder.h
TM/TransitieGenerators/: TuringGenerator.h  TuringTokenizer.cpp  TuringTokenizer.h  TuringVarDictionary.h
administration/: The Never Nestifier Project Voorstel.pptx  The Never Nestifier.pptx  The Never Nestifier2.pptx
administration/bug/: CFG to CNF (11_27_2023 3_20_58 PM).html  anas-LeftRecursion.txt  anas-LeftRecursionWEBSITE.txt  anas.txt  cnf check.txt  createConnections  finalWebsite.txt  main.cpp  reference.cpp
administration/docs/html/: A_8cpp.html  CFGConstructor_8cpp.html  CFGConstructor_8cpp__incl.map  CFGConstructor_8cpp__incl.md5  CFGConstructor_8h.html  CFGConstructor_8h__dep__incl.map  CFGConstructor_8h__dep__incl.md5  CFGConstructor_8h__incl.map  CFGConstructor_8h__incl.md5  CFGConstructor_8h_source.html  CFGKars_8cpp.html  CFGKars_8cpp__incl.map  CFGKars_8cpp__incl.md5  CFGKars_8h.html  CFGKars_8h__dep__incl.map  CFGKars_8h__dep__incl.md5  CFGKars_8h__incl.map  CFGKars_8h__incl.md5  CFGKars_8h_source.html  CFGTokenTest_8cpp.html  CFGTokenTest_8cpp__incl.map  CFGTokenTest_8cpp__incl.md5  CMakeLists_8txt.html  Config_8cpp.html  Config_8cpp__incl.map  Config_8cpp__incl.md5  Config_8h.html  Config_8h__dep__incl.map  Config_8h__dep__incl.md5  Config_8h__incl.map  Config_8h__incl.md5  Config_8h_source.html  DesignByContract_8h.html  DesignByContract_8h__dep__incl.map  DesignByContract_8h__dep__incl.md5  DesignByContract_8h__incl.map  DesignByContract_8h__incl.md5  DesignByContract_8h_source.html  DesignByContract__windows_8h.html  DesignByContract__windows_8h__incl.map  (+1494 more)
administration/docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+148 more)
administration/reports/: TO-groep voortgangsrapport10.xlsx  TO-groep voortgangsrapport11.xlsx  TO-groep voortgangsrapport12.xlsx  TO-groep voortgangsrapport13.xlsx
bug/: anas-LeftRecursion.txt  anas.txt  cfgKars.txt  cnf check.txt  finalWebsite.txt  sources.txt  temp  website.txt
demo/: avector.cpp  class.cpp  combination.cpp  forif.cpp  variables.cpp
lib/: DesignByContract.h  helper.cpp  helper.h  json.hpp
lib/emil/: CFG.cpp  CFG.h  LALR.cpp  LALR.h
lib/kars/: CFGKars.cpp  CFGKars.h
lib/kars/Toi Copy/: CFG.cpp  CFG.h  CMakeLists.txt  PDA.cpp  PDA.h  State.cpp  State.h  input-pda2cfg1.json  input.json  main.cpp  test
src/: CFG.cpp  CFG.h  CFGConstructor.cpp  CFGConstructor.h  Config.cpp  Config.h  LALR.cpp  LALR.h  Orchestrator.cpp  Orchestrator.h  ThreadFunction.cpp  ThreadFunction.h  Tokenazation.cpp  Tokenisation.cpp  Tokenisation.h
src/GUI/: GUI.cpp  GUI.h
src/TM/: Tape.cpp  Tape.h  TuringMachine.cpp  TuringMachine.h  TuringProduction.cpp  TuringProduction.h  TuringTools.cpp  TuringTools.h
src/TM/Creation/: TMBuilder.cpp  TMBuilder.h
src/TM/TransitieGenerators/: TuringDenestify.cpp  TuringDenestify.h  TuringGenerator.cpp  TuringGenerator.h  TuringIfElseAntiNesting.cpp  TuringIfElseAntiNesting.h  TuringTokenizer.cpp  TuringTokenizer.h  TuringVarDictionary.cpp  TuringVarDictionary.h
test/: CFGTokenTest.cpp  ThreadingTest.cpp  TuringMachineTest.cpp  parsetreetest.txt  test-main.cpp
test/Nested/: copyengine.ccresult.cc
test/compareFiles/: TM_3.txt  TM_test_7_result.cpp
test/kars/: karsTests
test/nestedExamples/: Vector.cpp  copyengine.ccresult.cc  demofile.cpp  demofilethreaded.cpp  engine.cc  game.cpp  game2.cpp  game3.cpp  game3a.cpp  game4.cpp  game5.cpp  game6.cpp  game7.cpp  test1.cc
test/results/: TM_result_11.cpp  TM_result_12.cpp  TM_result_13.cpp
test/testFiles/: TM_1.json  TM_test_1.cpp  TM_test_10.cpp  TM_test_11.cpp  TM_test_12.cpp  TM_test_13.cpp  TM_test_14.cpp  TM_test_15.cpp  TM_test_16.cpp  TM_test_17.cpp  TM_test_18.cpp  TM_test_19.cpp  TM_test_2.cpp  TM_test_20.cpp  TM_test_21.cpp  TM_test_22.cpp  TM_test_23.cpp  TM_test_24.cpp  TM_test_25.cpp  TM_test_26.cpp  TM_test_27.cpp  TM_test_28.cpp  TM_test_29.cpp  TM_test_3.cpp  TM_test_30.cpp  TM_test_31.cpp  TM_test_32.cpp  TM_test_33.cpp  TM_test_34.cpp  TM_test_35.cpp  TM_test_37.cpp  TM_test_38.cpp  TM_test_39.cpp  TM_test_4.cpp  TM_test_40.cpp  TM_test_41.cpp  TM_test_42.cpp  TM_test_43.cpp  TM_test_44.cpp  TM_test_45.cpp  (+43 more)
working/Nested/: copyengine.cc
working/TestFiles/: TMStaticTransitions.json  TM_1.json  TM_2.json  TM_3.json  TM_4.json
working/demo/: forif.cpp  knapsack.cpp  main.cpp  singletape.cpp  threading.cpp
working/input/CFG/: testGNF.json
working/input/config/: config.json
working/input/nestedExamples/: test1.cc  test2.cc  test3.cc  test4.cc
working/output/: TM_2.txt  TM_4.txt  TM_test.json
